log
Fri 08 Sep 2023 02:11:10 PM UTC: 
 tests:  0|6
total_score: 0/70
13c5c85
Fri 08 Sep 2023 02:25:44 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
cbb0df9
Fri 08 Sep 2023 02:26:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cc21dac
Fri 08 Sep 2023 02:31:36 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:39: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
   49 |   map->buckets[position] = createPair(_strdup(key), value);
      |                                       ^~~~~~~
      |                                       strdup
hashmap.c:49:39: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |   map->buckets[position] = createPair(_strdup(key), value);
      |                                       ^~~~~~~~~~~~
      |                                       |
      |                                       int
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
test.c: At top level:
test.c:8:8: error: conflicting types for ‘_strdup’; have ‘char *(const char *)’
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c:49:39: note: previous implicit declaration of ‘_strdup’ with type ‘int()’
   49 |   map->buckets[position] = createPair(_strdup(key), value);
      |                                       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d8ceeaf
